--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -1,5 +1,31 @@
+/***
+
+    ##### Nav bar #####
+
+***/
+.list{
+    background: @global-primary-background;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+        display: inline-block;
+    }
+}
+
+/***
+
+    ##### Hero #####
+
+***/
 #hero {
-    padding: 20px;
-    background: @global-muted-color;
-    border-bottom: 1px solid @global-primary-background;
+    
+}
+/***
+
+    ##### About #####
+
+***/
+#about {
 }
