--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -3,14 +3,20 @@
     ##### Nav bar #####
 
 ***/
+.nav{
+    background-color: @global-primary-background;
+}
 .list{
-    background: @global-primary-background;
     list-style: none;
     margin: 0;
     padding: 0;
-
     li {
         display: inline-block;
+    }
+    a {
+        display: block;
+        padding: 0px 14px;
+        color:white;
     }
 }
 
