--- a/assets/uikit/src/less/components/variables.less
+++ b/assets/uikit/src/less/components/variables.less
@@ -50,7 +50,7 @@
 @global-emphasis-color:                         #333;
 @global-muted-color:                            #999;
 
-@global-link-color:                             #1e87f0;
+@global-link-color:                             white;
 @global-link-hover-color:                       #0f6ecd;
 
 @global-inverse-color:                          #fff;
@@ -73,8 +73,8 @@
 // Borders
 //
 
-@global-border-width:                           1px;
-@global-border:                                 #e5e5e5;
+@global-border-width:                           2px;
+@global-border:                                 white;
 
 //
 // Box-Shadows
