--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -41,8 +41,16 @@
 
 ***/
 #hero {
-    
-}
+    background: url("../../../../images/heroimage.jpg");
+    min-height: 500px;
+    h1{
+       color:white; 
+       padding-top: 10%;
+    }
+    h2{
+        color:white; 
+     }
+    }
 /***
 
     ##### About #####
