--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -41,7 +41,7 @@
 
 ***/
 #hero {
-    background: url("../../../../images/heroimage.jpg");
+    background: url("../../../../images/heroimage.jpg") center center no-repeat;
     min-height: 500px;
     h1{
        color:white; 
@@ -57,4 +57,8 @@
 
 ***/
 #about {
+    
+}
+.me{
+    background-color: #f9f9f9;
 }
