--- a/assets/uikit/src/less/components/variables.less
+++ b/assets/uikit/src/less/components/variables.less
@@ -32,7 +32,7 @@
 // Typography
 //
 
-@global-font-family:                            'Lato', sans-serif;
+@global-font-family:                            'Open Sans', sans-serif;
 @global-font-size:                              16px;
 @global-line-height:                            1.5;      // 24px
 
