--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -53,6 +53,16 @@
     }
 /***
 
+    #### Welcome ####
+
+***/
+
+#welcome {
+
+}
+
+/***
+
     ##### About #####
 
 ***/
@@ -61,4 +71,29 @@
 }
 .me{
     background-color: #f9f9f9;
+}
+
+/***
+
+    ##### Skills #####
+
+***/
+#skills {
+
+}
+/***
+
+    ##### portfolio #####
+
+***/
+#portfolio {
+    
+}
+/***
+
+    ##### contact #####
+
+***/
+#contact {
+    
 }
