--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -83,6 +83,9 @@
 ***/
 #skills {
 
+    .gear {
+        background-color: grey;
+    }
 }
 /***
 
@@ -90,7 +93,9 @@
 
 ***/
 #portfolio {
-    
+    .header {
+        text-align: center;
+    }
 }
 /***
 
