--- a/assets/uikit/src/less/components/variables.less
+++ b/assets/uikit/src/less/components/variables.less
@@ -62,7 +62,7 @@
 @global-background:                             #fff;
 
 @global-muted-background:                       #f8f8f8;
-@global-primary-background:                     #bc519e;
+@global-primary-background:                     #ffa97f;
 @global-secondary-background:                   #222;
 
 @global-success-background:                     #32d296;
