--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -59,16 +59,22 @@
 
 ***/
 #hero {
-    background: url("../../../../images/heroimage.jpg") center center no-repeat;
+    background: url("../../../../images/palmhero.jpg") center center no-repeat;
     min-height: 500px;
+    background-size: cover;
     h1{
        color:white; 
        padding-top: 10%;
     }
     h2{
         color:white; 
-     }
     }
+    i{ 
+        color: white;
+        padding: 10px 10px;
+
+    }
+}
 /***
 
     #### Welcome ####
@@ -77,9 +83,9 @@
 
 #welcome {
 
-.pic {
+    .pic {
     background: grey;
-}
+    }
 }
 
 /***
@@ -88,7 +94,9 @@
 
 ***/
 #about {
-    
+.font {
+    font-size: 13px;
+}
 }
 .me{
     background-color: #f9f9f9;
