font and button
updated font size and button padding

--- a/assets/uikit/src/less/components/button.less
+++ b/assets/uikit/src/less/components/button.less
@@ -380,7 +380,9 @@
 
 .hook-button-misc;
 
-.hook-button() {}
+.hook-button() {
+    border-radius: 4px;
+}
 .hook-button-hover() {}
 .hook-button-focus() {}
 .hook-button-active() {}
