--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -69,10 +69,17 @@
     h2{
         color:white; 
     }
-    i{ 
-        color: white;
-        padding: 10px 10px;
-
+    button {
+        padding:10px;
+    }
+    .social-icons {
+        i{ 
+            color: white;
+            padding: 10px 10px;
+        }
+    }
+    .hero-btn i {
+        vertical-align: middle;
     }
 }
 /***
