--- a/assets/uikit/src/less/components/variables.less
+++ b/assets/uikit/src/less/components/variables.less
@@ -51,7 +51,7 @@
 @global-muted-color:                            #999;
 
 @global-link-color:                             white;
-@global-link-hover-color:                       #0f6ecd;
+@global-link-hover-color:                       lighten(@global-primary-background, 30%);
 
 @global-inverse-color:                          #fff;
 
@@ -62,7 +62,7 @@
 @global-background:                             #fff;
 
 @global-muted-background:                       #f8f8f8;
-@global-primary-background:                     #d8651e;
+@global-primary-background:                     #4589B0;
 @global-secondary-background:                   #222;
 
 @global-success-background:                     #32d296;
