--- a/assets/uikit/src/less/components/variables.less
+++ b/assets/uikit/src/less/components/variables.less
@@ -63,7 +63,7 @@
 
 @global-muted-background:                       #f8f8f8;
 @global-primary-background:                     #4589B0;
-@global-secondary-background:                   #222;
+@global-secondary-background:                   #f29400;
 
 @global-success-background:                     #32d296;
 @global-warning-background:                     #faa05a;
