--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -6,13 +6,25 @@
     
     .nav {
         background-color: @global-primary-background;
+        .icon-logo {
+            font-size: 25px;
+        }
+        .logo { 
+            max-height: 24px;
+        }
+        .firstname {
+            color:#fff;
+        }
+        .lastname {
+            color:@global-secondary-background;
+        }
     }
     
     .list {
         list-style: none;
         margin: 0;
         padding: 0;
-        font-size: 12px;
+        font-size: 15px;
         li {
             display: inline-block;
         }
@@ -97,19 +109,25 @@
             margin-top: 0;
         }
         button {
-            padding: 8px;
-            font-size: 10px;
+            padding: 14px;
+            font-size: 14px;
         }
         .social-icons {
             li {
                 display: inline-block;
                 color: white;
                 padding: 8px;
-                font-size: 23px;
+                font-size: 32px;
             }
         }
         .hero-btn i {
             vertical-align: middle;
+        }
+        .f-name {
+            color:fff;
+        }
+        .l-name {
+            color: @global-secondary-background;
         }
     }
     /***
