--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -34,6 +34,9 @@
             color: @global-link-color;
             transition: all ease .4s;
             text-decoration: none;
+            &.uk-active {
+                color: lighten(@global-secondary-background, 5%);
+            }
         }
         a:hover {
             color: @global-link-hover-color;
@@ -183,8 +186,14 @@
 
 ***/
     #callout {
+            background-color: @global-primary-background;
         .callout-btn {
-
+            background-color: @global-secondary-background;
+            color: white;
+            padding: 11px;
+        }
+        .text {
+            color: white;
         }
     }
 
@@ -194,7 +203,11 @@
 
 ***/
     
-    #contact {}
+    #contact {
+        .email-link {
+            color: @global-primary-background;
+        }
+    }
     /*** 
     #### footer#### 
 
