--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -204,12 +204,17 @@
 ***/
     
     #contact {
-        .email-link {
+        .email-link a {
             color: @global-primary-background;
+            text-decoration: underline;
+        }
+        .linkin a {
+            color: @global-primary-background;
+            text-decoration: underline;
         }
     }
     /*** 
-    #### footer#### 
+    ### footer#### 
 
 ***/
     
