--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -154,16 +154,26 @@
     #### Welcome ####
 
 ***/
+
+    #welcome {
+        background-color: #f2f2f2;
+    }
     /***
 
     ##### About #####
 
 ***/
+    #about {
+        background-color: #f2f2f2;
+    }
     /***
 
     ##### Skills #####
 
 ***/
+    #skills {
+        background-color: #f2f2f2;
+    }
     .uk-list {
         list-style: none;
     }
@@ -176,6 +186,7 @@
 ***/
     
     #portfolio {
+        margin-bottom: 30px;
         .header {
             text-align: center;
         }
@@ -204,6 +215,7 @@
 ***/
     
     #contact {
+        background-color: #f2f2f2;
         .email-link a {
             color: @global-primary-background;
             text-decoration: underline;
@@ -224,4 +236,17 @@
             color: white;
             text-align: center;
         }
+        .social-footer {
+            li {
+                display: inline-block;
+                color: white;
+                padding: 8px;
+                font-size: 32px;
+                } 
+            .made {
+                padding: 10px;  
+            }
+        }
+
     }
+    
