--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -235,6 +235,10 @@
         .info {
             color: white;
             text-align: center;
+
+        .made {
+                padding: 10px;  
+            }
         }
         .social-footer {
             li {
@@ -243,10 +247,17 @@
                 padding: 8px;
                 font-size: 32px;
                 } 
-            .made {
-                padding: 10px;  
-            }
+            
         }
-
+        .top {
+            position: fixed;
+            right: 3%;
+            bottom: 0;
+            z-index: 9999;
+            color: #ffff;
+            background: #1481A5;
+            padding: 11px;
+            border-radius: 5px 5px 0 0;
+        }
     }
     
