--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -216,15 +216,13 @@
     
     #contact {
         background-color: #f2f2f2;
-        .email-link a {
+        .Form input {
             color: @global-primary-background;
-            text-decoration: underline;
+            margin-right:50%;
         }
-        .linkin a {
-            color: @global-primary-background;
-            text-decoration: underline;
-        }
+        
     }
+
     /*** 
     ### footer#### 
 
