--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -156,7 +156,8 @@
 ***/
 
     #welcome {
-        background-color: #f2f2f2;
+        background-color: #F0F0F0;
+        height:100vh;
     }
     /***
 
@@ -164,7 +165,8 @@
 
 ***/
     #about {
-        background-color: #f2f2f2;
+        background-color: #F0F0F0;
+        height:100vh;
     }
     /***
 
@@ -172,7 +174,8 @@
 
 ***/
     #skills {
-        background-color: #f2f2f2;
+        background-color: #F0F0F0;
+        height:100vh;
     }
     .uk-list {
         list-style: none;
@@ -215,12 +218,18 @@
 ***/
     
     #contact {
-        background-color: #f2f2f2;
+        background-color: #F0F0F0;
+        height:100vh;
+        overflow: hidden;
         .Form input {
             color: @global-primary-background;
             margin-right:50%;
         }
-    
+        .error {
+            border: 1px solid #C21807;
+            transition: all ease .4s;
+        }
+
     }
 
     
