--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -166,7 +166,11 @@
 ***/
     #about {
         background-color: #F0F0F0;
-       
+        .intro {
+            padding-top: 20px;
+        }
+        
+
     }
     /***
 
