--- a/assets/uikit/src/less/components/custom.less
+++ b/assets/uikit/src/less/components/custom.less
@@ -18,6 +18,9 @@
         .lastname {
             color: @global-secondary-background;
         }
+        .logo_home {
+            text-decoration: none;
+        }
     }
     
     .list {
@@ -197,6 +200,9 @@
         .header {
             text-align: center;
         }
+        .portfolio {
+            padding-top: 15px;
+        }
     }
  /***
 
@@ -212,6 +218,9 @@
         }
         .text {
             color: white;
+        }
+        .resume {
+            text-decoration: none;
         }
     }
 
