--- a/public/assets/uikit/src/less/components/custom.less
+++ b/public/assets/uikit/src/less/components/custom.less
@@ -160,7 +160,9 @@
 
     #welcome {
         background-color: #F0F0F0;
-        
+        .text_1 {
+            padding-top: 6%;
+        }
     }
     /***
 
