updated contact page

--- a/public/assets/uikit/src/less/components/custom.less
+++ b/public/assets/uikit/src/less/components/custom.less
@@ -244,6 +244,9 @@
             border: 1px solid #C21807;
             transition: all ease .4s;
         }
+        .email a{
+           color: blue;
+       }
 
     }
 
