--- a/public/assets/uikit/src/less/components/custom.less
+++ b/public/assets/uikit/src/less/components/custom.less
@@ -161,7 +161,7 @@
     #welcome {
         background-color: #F0F0F0;
         .text_1 {
-            padding-top: 6%;
+            padding:40px;
         }
     }
     /***
