--- a/public/assets/uikit/src/less/components/custom.less
+++ b/public/assets/uikit/src/less/components/custom.less
@@ -244,7 +244,7 @@
             border: 1px solid #C21807;
             transition: all ease .4s;
         }
-        .email a{
+        .email {
            color: blue;
        }
 
@@ -286,5 +286,20 @@
             padding: 11px;
             border-radius: 5px 5px 0 0;
         }
+
+        @media only screen and (max-width: 640px) {
+
+
+
+
+        }
+
+    
+
+
+
+
+
+
     }
     
