--- a/public/assets/uikit/src/less/components/custom.less
+++ b/public/assets/uikit/src/less/components/custom.less
@@ -161,7 +161,7 @@
     #welcome {
         background-color: #F0F0F0;
         .text_1 {
-            padding:40px;
+            padding-top: 40px;
         }
     }
     /***
@@ -246,6 +246,9 @@
         }
         .email {
            color: blue;
+       }
+       .text_2 {
+           padding-top: 40px;
        }
 
     }
