--- a/public/assets/uikit/src/less/components/custom.less
+++ b/public/assets/uikit/src/less/components/custom.less
@@ -183,8 +183,7 @@
 
 ***/
     #skills {
-        background-color: #F0F0F0;
-        
+        background-color: #F0F0F0;   
     }
     .uk-list {
         list-style: none;
@@ -247,7 +246,7 @@
         .email {
            color: blue;
        }
-       .text_2 {
+       .focus {
            padding-top: 40px;
        }
 
