--- a/public/assets/uikit/src/less/components/custom.less
+++ b/public/assets/uikit/src/less/components/custom.less
@@ -204,6 +204,10 @@
         .portfolio {
             padding-top: 15px;
         }
+        .samples {
+            padding: 7%;
+        }
+
     }
  /***
 
