--- a/public/assets/uikit/src/less/components/custom.less
+++ b/public/assets/uikit/src/less/components/custom.less
@@ -207,6 +207,9 @@
         .samples {
             padding: 7%;
         }
+        h2 {
+            text-align: center;
+        }
 
     }
  /***
